fix result row-gap

--- a/src/routes/Result/Result.module.scss
+++ b/src/routes/Result/Result.module.scss
@@ -9,8 +9,7 @@
   .card {
     width: 100%;
     margin: 0 auto;
-    display: flex;
-    flex-direction: column;
+    display: grid;
     row-gap: 2.5rem;
     .picture {
       width: 100%;
